# stochastic-particles

./: .gitignore  Makefile  README.md  TODO.md  basic.cpp  distribution.h  io.h  particle.h  rand.h  simulation.h
examples/: early_wait_time.cpp  gate.cpp  gates.cpp  laps.cpp  late_wait_time.cpp  max_wait_laps.cpp  mean.cpp  resets.cpp  static.cpp  survival_rate.cpp  threshold_wait_time.cpp  wait_times.cpp
headers/: cli.h  distribution.h  gate.h  io.h  lap.h  math.h  particle.h  rand.h  reset.h  simulation.h  strategy.h
rust/: Cargo.toml  travel_time.py  visualize.py  visualize.sh
rust/src/: cli.rs  main.rs
rust/src/basic/: mod.rs
rust/src/basic/laps/: test.rs
rust/src/basic/lifespan/: mod.rs  test.rs
rust/src/basic/sampling/: mod.rs  test.rs
rust/src/basic/simulation/: mod.rs  test.rs
rust/src/basic/theory/: mod.rs  test.rs
rust/src/basic/validation/: test.rs
rust/src/static/: mod.rs  test.rs
rust/src/static/simulation/: mod.rs  test.rs
rust/src/static/theory/: mod.rs  test.rs
rust/src/static/validation/: mod.rs  test.rs
simulation/: Cargo.toml  laps.csv  laps.py  lifespan.csv  lifespan.py  travel_time.py  travel_time_laps.py  travel_time_lifespan.py  visualize.sh
simulation/src/: lib.rs
simulation/src/basic/: mod.rs
simulation/src/basic/laps/: mod.rs
simulation/src/basic/lifespan/: test.rs
simulation/src/basic/sampling/: mod.rs  test.rs
simulation/src/basic/simulation/: mod.rs  test.rs
simulation/src/basic/simulation/laps/: mod.rs  test.rs
simulation/src/basic/theory/: mod.rs
simulation/src/basic/validation/: mod.rs
(+30 files in other folders)
