[package]
name = "stochastic"
version = "0.1.0"
edition = "2024"

[dependencies]
fraction = "0.15.3"

[[bin]]
name = "basic-generate"
path = "src/bin/basic/generate.rs"

[[bin]]
name = "basic-validate"
path = "src/bin/basic/validate.rs"


[[bin]]
name = "basic-validate-granularity"
path = "src/bin/basic/validate_granularity.rs"

[[bin]]
name = "basic-generate-laps"
path = "src/bin/basic/generate_laps.rs"